# pi-arm

./: README.md
docs/: websocket-api.md
scripts/: build.sh  install_dependencies.sh  setup_can.sh  vcan_motor_emulator.py
src/pi_arm_bringup/: CMakeLists.txt  package.xml
src/pi_arm_bringup/config/: controllers.yaml
src/pi_arm_bringup/launch/: bringup.launch.py
src/pi_arm_can/: CMakeLists.txt  package.xml
src/pi_arm_can/include/pi_arm_can/: can_driver.hpp  protocol.hpp  transmission.hpp
src/pi_arm_can/src/: can_driver.cpp  protocol.cpp  transmission.cpp
src/pi_arm_can/test/: test_pi_arm_can.cpp
src/pi_arm_description/: CMakeLists.txt  package.xml
src/pi_arm_description/launch/: display.launch.py
src/pi_arm_description/meshes/: base_link.STL  link_02.STL  link_04.STL  link_05.STL  link_06.STL  link_07.STL  link_08.STL  link_09.STL
src/pi_arm_description/urdf/: pi_arm.urdf.xacro
src/pi_arm_hardware/: CMakeLists.txt  package.xml  pi_arm_hardware_plugin.xml
src/pi_arm_hardware/include/pi_arm_hardware/: backend.hpp  pi_arm_system.hpp
src/pi_arm_hardware/src/: backend.cpp  pi_arm_system.cpp
src/pi_arm_hardware/test/: test_backend.cpp
src/pi_arm_interfaces/: CMakeLists.txt  package.xml
src/pi_arm_interfaces/action/: DirectMove.action  MoveJ.action  MoveJs.action  MoveL.action
src/pi_arm_interfaces/msg/: HardwareState.msg  RobotState.msg  TaskState.msg
src/pi_arm_interfaces/srv/: ManageMotor.srv  StopMotion.srv
src/pi_arm_manager/: CMakeLists.txt  package.xml
src/pi_arm_manager/include/pi_arm_manager/: state_aggregator.hpp
src/pi_arm_manager/launch/: manager.launch.py
src/pi_arm_manager/src/: manager_node.cpp
src/pi_arm_manager/test/: test_state_aggregator.cpp
src/pi_arm_moveit_config/: CMakeLists.txt  package.xml
src/pi_arm_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  pi_arm.srdf  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner_planning.yaml
src/pi_arm_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py
src/pi_arm_websocket/: package.xml  setup.cfg  setup.py
src/pi_arm_websocket/.pytest_cache/v/cache/: nodeids
src/pi_arm_websocket/launch/: websocket.launch.py
src/pi_arm_websocket/pi_arm_websocket/: __init__.py  gateway.py  protocol.py
src/pi_arm_websocket/resource/: pi_arm_websocket
src/pi_arm_websocket/test/: test_protocol.py
