<?xml version="1.0"?>
<package format="3">
  <name>pi_arm_bringup</name>
  <version>0.1.0</version>
  <description>Unified ros2_control, MoveIt, manager, and WebSocket launch for Pi Arm.</description>
  <maintainer email="maintainer@example.com">Pi Arm Maintainer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>pi_arm_description</exec_depend>
  <exec_depend>pi_arm_hardware</exec_depend>
  <exec_depend>pi_arm_manager</exec_depend>
  <exec_depend>pi_arm_moveit_config</exec_depend>
  <exec_depend>pi_arm_websocket</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
