<?xml version="1.0"?>
<package format="3">
  <name>pi_arm_hardware</name>
  <version>0.1.0</version>
  <description>ros2_control hardware plugin for the six-axis Pi Arm.</description>
  <maintainer email="maintainer@example.com">Pi Arm Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pi_arm_can</depend>
  <depend>pi_arm_interfaces</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
