<?xml version="1.0"?>
<package format="3">
  <name>pi_arm_websocket</name>
  <version>0.1.0</version>
  <description>WebSocket compatibility gateway for Pi Arm.</description>
  <maintainer email="maintainer@example.com">Pi Arm Maintainer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pi_arm_interfaces</exec_depend>
  <exec_depend>python3-websockets</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
